--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "pretest": "npm run lint --silent"
   },
   "dependencies": {
+    "babel-runtime": "6.18.0",
+    "lodash": "^4.17.4",
     "meteor-node-stubs": "~0.2.0",
-    "babel-runtime": "6.18.0"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
