--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "lgm",
   "private": true,
+  "version": "1.0.0",
+  "sasslintConfig": "./sass-lint.yml",
   "scripts": {
     "start": "meteor run",
-    "lint": "eslint .;exit 0",
+    "lint": "npm-run-all eslint sass-lint",
+    "eslint": "eslint .;exit 0",
+    "sass-lint": "sass-lint -c .sass-lint.yml '**/*.scss' -v -q -i 'node_modules/**/*.scss' ;exit 0",
     "pretest": "npm run lint --silent"
   },
   "dependencies": {
@@ -14,7 +18,6 @@
     "react": "^15.4.2",
     "react-dnd": "^2.2.0",
     "react-dom": "^15.4.2",
-    "react-payment": "^0.1.6",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
@@ -30,7 +33,9 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-meteor": "^4.0.1",
     "eslint-plugin-react": "^6.9.0",
-    "redux-devtools": "^3.3.2"
+    "npm-run-all": "^4.0.1",
+    "redux-devtools": "^3.3.2",
+    "sass-lint": "^1.10.2"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
